# memory-hub

./: .gitignore  .gitleaks.toml  .gitleaksignore  .memoryhub.yaml  CHANGELOG.md  CHANGES_NEEDED.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_SESSION-curation.md  NEXT_SESSION-dreaming.md  NEXT_SESSION.md  NOTICE  README.md  SECURITY.md  alembic.ini  llms.txt  pyproject.toml  research-fips-storage.md
benchmarks/amb-harness/: .gitignore  RUN.md  external_results.json  extract_facts.py  pyproject.toml  sweep.sh  vercel.json
benchmarks/amb-harness/scripts/: run-with-rpd-wait.sh
benchmarks/amb-harness/src/memory_bench/: cli.py  (+4 more)
benchmarks/evalhub-adapter/: Containerfile  main.py  pyproject.toml  run_smoke.py
benchmarks/evalhub-adapter/config/: combined-pro.yaml  dreaming-pro.yaml  dreaming-smoke.yaml  dreaming-tiny.yaml  dreaming-validate.yaml  provider.yaml  smoke-eval.yaml
benchmarks/evalhub-adapter/manifests/: buildconfig.yaml  evalhub.yaml  mlflow.yaml  namespace.yaml
benchmarks/evalhub-adapter/tests/: test_adapter.py  test_preflight.py
memory-hub-mcp/: .dockerignore  .gitignore  .gitleaks.toml  .template-info  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  DEVELOPMENT_PROCESS.md  LICENSE  Makefile  OPENSHIFT_DEPLOYMENT.md  README.md  SYSTEM_PROMPT.md  TESTING.md  TOOLS_PLAN.md  conftest.py  deploy.sh  dev-users.example.json  dev-users.json  openshift.yaml  pyproject.toml  remove_examples.sh  requirements.txt  run-local.sh  run_local.py
memory-hub-mcp/.claude/commands/: deploy-mcp.md  exercise-tools.md  implement-mcp-item.md  update-docs.md  write-system-prompt.md
memory-hub-mcp/.fips-agents-cli/: README.md
memory-hub-mcp/.github/: CODEOWNERS
memory-hub-mcp/deploy/: build-context.sh  deploy-minimal.sh  deploy.sh  openshift-minimal.yaml  openshift.yaml  users-configmap.example.yaml  users-configmap.yaml
memory-hub-mcp/docs/: ENTERPRISE_PATTERNS.md  TOOLS_GUIDE.md
memory-hub-mcp/src/: main.py  server_v3.py
memory-hub-mcp/src/core/: __init__.py  app.py  audit.py  auth.py  authz.py  loaders.py  logging.py  server.py
memory-hub-mcp/src/middleware/: __init__.py
memory-hub-mcp/src/prompts/: __init__.py
memory-hub-mcp/src/resources/: __init__.py
memory-hub-mcp/src/tools/: __init__.py  _deps.py  _push_helpers.py  auth.py  backfill_entities.py  create_relationship.py  delete_memory.py  get_focus_history.py  get_memory_history.py  get_relationships.py  get_session.py  get_similar_memories.py  list_memory.py  list_projects.py  manage_curation.py  manage_graph.py  manage_project.py  manage_session.py  memory.py  read_memory.py  register_session.py  report_contradiction.py  search_memory.py  set_curation_rule.py  set_session_focus.py  suggest_merge.py  thread.py  update_memory.py  write_memory.py
memory-hub-mcp/tests/: test_audit.py  test_auth.py  test_auth_remote.py  test_authz.py  test_driver_id.py  test_extract_facts.py  test_graduate.py  test_loaders.py  test_memory_dispatcher.py  test_no_error_dicts.py  test_obo_authorization.py  test_pattern_signals.py  test_relevant_until.py  test_source_tagging.py  test_tenant_isolation.py  test_thread_tool.py  test_tool_profiles.py
memory-hub-mcp/tests/examples/: __init__.py  test_logging_middleware.py  test_preview_prompt.py  test_prompts.py  test_tools_compliance.py
memory-hub-mcp/tests/tools/: conftest.py  test_campaign_read_path.py  test_create_relationship.py  test_delete_memory.py  test_embedding_error_handling.py  test_entity_service.py  test_get_focus_history.py  test_get_memory_history.py  test_get_relationships.py  test_get_similar_memories.py  test_list_compact.py  test_list_projects.py  test_manage_curation.py  test_manage_graph.py  test_manage_project.py  test_manage_session.py  test_push_helpers.py  test_read_memory.py  test_register_session.py  test_report_contradiction.py  test_search_memory.py  test_session_ttl.py  test_set_curation_rule.py  test_set_session_focus.py  test_suggest_merge.py  test_update_memory.py  test_write_memory.py
memoryhub-agents/: README.md  pyproject.toml
memoryhub-agents/deploy/fact-checker/: cronjob.yaml
memoryhub-agents/deploy/trace-reviewer/: deployment.yaml
memoryhub-agents/tests/: test_fact_checker.py  test_trace_reviewer.py
memoryhub-auth/: .dockerignore  CLAUDE.md  Containerfile  Makefile  alembic.ini  deploy.sh  openshift.yaml  pyproject.toml  requirements.txt
memoryhub-auth/alembic/: env.py
memoryhub-auth/alembic/versions/: 001_initial_schema.py
memoryhub-auth/deploy/: oauthclient.yaml
memoryhub-auth/src/: config.py  database.py  errors.py  keys.py  main.py  models.py  schemas.py  session_cleanup.py  tokens.py
memoryhub-auth/src/routes/: admin.py  authorize.py  health.py  openshift_callback.py  token.py  well_known.py
memoryhub-auth/tests/: conftest.py  test_admin.py  test_authorization_code.py  test_authorize.py  test_keys.py  test_openshift_callback.py  test_session_cleanup.py  test_token_endpoint.py  test_tokens.py  test_well_known.py
memoryhub-auth/tests/integration/: test_pkce_e2e.py
memoryhub-cli/: CHANGELOG.md  README.md  pyproject.toml
memoryhub-cli/src/memoryhub_cli/: __init__.py  admin.py  config.py  export.py  main.py  output.py  project_config.py
memoryhub-cli/tests/: test_admin.py  test_checkpoint.py  test_config.py  test_describe_project.py  test_entity_commands.py  test_parity_commands.py  test_project_config.py  test_promote.py
memoryhub-ui/backend/: pyproject.toml  requirements.txt
memoryhub-ui/backend/src/: config.py  database.py  main.py  routes.py  schemas.py
memoryhub-ui/backend/tests/: test_routes.py
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk/src/memoryhub/: __init__.py  auth.py  client.py  config.py  exceptions.py  export.py  models.py
sdk/tests/: test_auth.py  test_client.py  test_config.py  test_describe_project.py  test_export.py  test_models.py  test_rbac_live.py  test_sdk_kagenti_contract.py  test_version.py
sdk/tests/test_extraction/: conftest.py  test_decision.py  test_dedup.py  test_entity.py  test_models.py  test_pipeline.py  test_preference.py
(+705 files in other folders)
