[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryhub-core"
version = "0.3.0"
description = "Kubernetes-native agent memory for OpenShift AI -- server-side library (models, services, storage, RBAC). Distinct from the `memoryhub` SDK on PyPI; see docs/package-layout.md."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg",
    "pgvector",
    "pydantic>=2.0",
    "pydantic-settings",
    "minio",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff",
    "aiosqlite",
    "greenlet",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring real PostgreSQL + pgvector (deselect with '-m not integration')",
    "perf: benchmark suite that talks to deployed embedding/reranker services (opt-in via '-m perf')",
]
