[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryhub-core"
version = "0.10.1"
description = "Kubernetes-native agent memory for OpenShift AI -- server-side library (models, services, storage, RBAC). Distinct from the `memoryhub` SDK on PyPI; see docs/package-layout.md."
license = {text = "Apache-2.0"}
authors = [{ name = "Wes Jackson" }]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg",
    "pgvector",
    "pydantic>=2.0",
    "pydantic-settings",
    "minio",
    "alembic",
    "redis>=5.0",
    "httpx",
    "psycopg2-binary",
    "pyyaml",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
extraction = [
    "spacy>=3.7",
    "gliner>=0.2.7",
]
dev = [
    "pytest",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff",
    "aiosqlite",
    "greenlet",
    "fakeredis>=2.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/perf/fixtures/topics/*.py" = ["E501"]  # synthetic memory content — long by design
"src/memoryhub_core/models/contradiction.py" = ["F821"]  # SQLAlchemy forward ref Mapped["MemoryNode"]
"memoryhub-auth/src/routes/*.py" = ["B008"]  # Depends() in defaults is idiomatic FastAPI

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring real PostgreSQL + pgvector (deselect with '-m not integration')",
    "deployed: tests requiring a live OpenShift cluster with port-forwarding (deselect with '-m not deployed')",
    "perf: benchmark suite that talks to deployed embedding/reranker services (opt-in via '-m perf')",
]
