[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryhub-agents"
version = "0.1.0"
description = "Shared framework for MemoryHub curation agents"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",        # Valkey is Redis-compatible
    "memoryhub>=0.1.0",  # MemoryHub SDK for MCP client
]

[project.scripts]
fact-checker = "memoryhub_agents.plugins.run_fact_checker:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
trace-reviewer = "memoryhub_agents.plugins.run_trace_reviewer:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
