[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoryhub-cli"
version = "0.1.0"
description = "CLI client for MemoryHub — centralized, governed memory for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Wes Jackson" },
]
keywords = ["ai", "agents", "memory", "cli", "mcp"]
dependencies = [
    "memoryhub>=0.1.0",
    "typer[all]>=0.15",
    "rich>=13.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]

[project.scripts]
memoryhub = "memoryhub_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/redhat-ai-americas/memory-hub"
Repository = "https://github.com/redhat-ai-americas/memory-hub"
Issues = "https://github.com/redhat-ai-americas/memory-hub/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/memoryhub_cli"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
