[project]
name = "omb"
version = "0.1.0"
description = "Open Memory Benchmark"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.0",
    "typer>=0.12",
    "rich>=13",
    "rank-bm25>=0.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tiktoken>=0.12.0",
    "scipy>=1.11",
    "anthropic>=0.52",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "minio>=7.0",
    "alembic>=1.0",
    "openai>=1.0",
    "google-genai>=1.66.0",
    "memoryhub>=0.14.0",
    "eval-hub-sdk>=0.4.2",
    "oras>=0.2.42",
    "olot>=1.0.0",
]

[project.scripts]
omb = "memory_bench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_bench"]

[tool.uv.sources]
memoryhub = { path = "../../sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
