[project]
name = "memoryhub-evalhub-adapter"
version = "0.1.0"
description = "EvalHub BYOF adapter wrapping the AMB harness for MemoryHub"
requires-python = ">=3.11"
dependencies = [
    "eval-hub-sdk>=0.4.2",
    "oras>=0.2.42",
    "olot>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memoryhub_evalhub"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
